# Market-Simulation

./: .env  COMPLETION_SUMMARY.md  DATA_SHORTAGE_ISSUE.md  FINAL_SIMPLIFICATION.md  FINDINGS_SUMMARY.md  QFCLIENT_SETUP.md  QUICK_START.txt  README.md  README_LIQUIDITY_STUDY.md  analyze_reit_regimes.py  housing_liquidity_comparison.py  main.py  requirements.txt  sim_main copy.py
Market_sim/: FORMULAS_AND_THEORY.md  SIMULATION_README.md  main.py
Market_sim/data/: Residential_Equity.csv  rwa-token-timeseries-export-1774989038960.csv  trade_history_output.csv
Market_sim/dmm/: ORGANIZATION.md  README.md  __init__.py  requirements.txt
Market_sim/documentation/: 00_QUICK_START.md  01_CURRENT_LIMITATIONS.md  02_FUTURE_IMPROVEMENTS.md  03_DATA_REQUIREMENTS.md  04_MODEL_COMPARISON.md  05_METHODOLOGICAL_CONSIDERATIONS.md  06_VALIDATION_TESTING.md  07_REFERENCES.md  README.md
Market_sim/outputs/: .deep_markov_model_diagnostic.pt.icloud  CRE_BASELINE_ANALYSIS.md  README_LIQUIDITY_STUDY.md  bayesian_cre_transition.npz  cre_monthly.csv  deep_markov_model_qfclient.pt  hybrid_markov_model.npz  multi_seed_liquidity_sweep_results.csv  multi_seed_liquidity_sweep_results_v2.csv
Market_sim/scripts/: adoption_sensitivity.py  analytical_markov.py  analyze_cre_regimes.py  bayesian_cre_transition.py  housing_liquidity_comparison.py  monte_carlo_analysis.py  (+4 more)
RL_Trading/: README.md
future_work/: README.md
notebooks/: .hidden_markov_models.ipynb.icloud  markov_chains (1).ipynb
qfclient-main/: pyproject.toml  requirements.txt
qfclient-main/docs/: PROVIDERS.md  QUICKSTART.md
qfclient-main/src/qfclient/: cli.py
qfclient-main/src/qfclient/common/: __init__.py  types.py
qfclient-main/src/qfclient/crypto/: __init__.py
qfclient-main/src/qfclient/crypto/models/: crypto.py
qfclient-main/src/qfclient/crypto/providers/: __init__.py  base.py  cryptocompare.py
qfclient-main/src/qfclient/market/models/: economic.py  news.py  options.py
qfclient-main/src/qfclient/market/providers/: __init__.py  alpaca.py  alpha_vantage.py  base.py  finnhub.py  fmp.py  marketstack.py  polygon.py  sec.py  tradier.py  twelve_data.py  yfinance.py
qfclient-main/tests/: conftest.py
sim/: calibration.py  data_loader.py  market_simulator.py  microstructure.py  portfolio.py  regimes.py  types.py  utils.py
(+79 files in other folders)
